# jqemu

./: .gitignore  compile_linking.md  kvm.md  linker_script.md  make.md
arm/: create_sd.sh  instruction.md  makefile  startup.s  term.md  vespress-19.sh
arm/md/: CMSIS.md  GPIO.md  README.md  bootrom.md  registers.md
arm/pico/: CMakeLists.txt  compile_commands.json
arm/pico/.cache/clangd/index/: led25.c.621FF77B4A02A241.idx
arm/pico/src/: hello_world.c  led25.c
arm/rp2040/: AMBA-APB.md  MEMORY_MAP.md  single_cycle_implemention.md
arm/shellcode/: first
arm/src/: test.c
arm/u-boot/: 01-firstAssembly.mk  02-linkScript.mk  LinkScript.ld  create_sd.sh  makefile
avr/: bootloader.md  makefile  ports.md  spi.md
avr/atmega328p/: ISR.md  (+7 more)
bare-metal/: .lst  README.md  makefile
boot2/: makefile
mk/: grep.mk
pico/: BOOTROM.md  Boot_stage2.ld  CMakeLists.txt  Crt0.ld  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake  linux_output.txt  macro.c  makefile  memmap.ld  output-cmake.txt  output_verbose_only.txt  pico.h  rp2040.ld  sio.h  term_Circuit.md  term_macro.md  term_pico_Power-On-State-Machine.md  term_pico_Register.md  term_pico_SIO.md  term_shell.md  term_wave-form.md
pico/include/: config.h  j_define.h
pico/include/asm/boot2_helpers/: exit_from_boot2.S  read_flash_sreg.S  wait_ssi_ready.S
pico/include/boards/: pico.h
pico/include/boot_stage2/: config.h
pico/include/dron/: input.h  print.h
pico/include/hardware/: platform_defs.h
pico/include/hardware/regs/: addressmap.h  sio.h
pico/include/hardware/structs/: sio.h
pico/include/pico/: IRQn_Type.h  NVIC_Type.h  asm_helper.S  config_autogen.h  j_address.h  j_crc_256.h  j_define.h
pico/src/: 0x03_char.c  dron.c  led25.c  main.c
pico/src/XOSC/: \  bin2uf2.c  init-clock.c  makefile  memmap.ld  memmap_flash.ld  memmap_sram.ld  notmain.c  start.s
pico/src/baremetalembedded/: Makefile
pico/src/boot/: 02-led25_macro.c  @.map  func.s  led25.c  main.c  makefile
pico/src/boot/CRT/: Crt0.S  makefile
pico/src/boot/boot_stage/: makefile  memmap_boot2.ld  pad_checksum.py
pico/src/boot/boot_startup/: boot_crt0.s  makefile
pico/src/boot/crt0/: Crt0.S  Crt0.ld  crt0.s  makefile  memmap_crt0.ld
pico/src/boot/stage2/: boot2.S  boot2_w25q080.S  makefile  memmap_boot2.ld  memmap_bs2.ld
pico/src/boot_stage2/: .map  boot_stage2.s  makefile  memmap_boot_stage2.ld
pico/src/dron/: input.c  print.c
pico/src/flash/: README.md  bin2uf2.c  makefile  memmap.ld  notmain.c  start.s
pico/src/hack/: 0x02_hello_world.c  0x06_double.c
pico/src/hack/dron/: CMakeLists.txt  input.c
pico/src/led25/: 01-led25.c  02-led25_macro.c  03-led25-init_clock.c  04-led25-init_sys.c  bin2uf2.c  clock_init.c  init-clock.c  init-clock.cc  init-sys.c  init-timer.c  init-uart.c  led25.c  main.c  makefile  memmap.ld  memmap_rp2040.ld  nvic-enableIRQ.c  startup_rp2040.c  startup_rp2040.ld  sys_init.c  timer_init.c
pico/src/led25/include/: j_address.h  j_defines.h  j_funcsel.h
pico/src/led25/include/mcu/: GPIO_FUNCSEL.h  IO_BANK0.h  IO_BANK0_Type.h  PADS_BANK0.h  PADS_BANK0_Type.h
pico/src/macro/: a.out  macro.c
pico/src/mcu-starter/: IO_BANK0.h  IO_BANK0_Type.h  PADS_BANK0.h  PADS_BANK0_Type.h  led25.c  makefile  memmap_rp2040.ld  rp2040.ld  startup_rp2040.c  startup_rp2040.cc
pico/src/mcu-starter/make/: Makefile  notmain_bin2uf2.c.out
pico/src/mcu-starter/tools/: makefile
pico/src/notmain/: README.md  bin2uf2  bin2uf2.c  elf2uf2.c  flash_memmap.ld  led25.c  makefile  memmap_sram.ld  notmain.c  notmain_macro.c  start.S  startup.s
pico/src/notmain/include/: crcpico.h
pico/src/pio/: hello.pio
pico/src/sdk/: 0x06_double_MOD.c
pico/src/symbol/: symbol_test.c
pico/src/tools/: bin2uf2.c  makefile  makeuf2.c  mcu2uf2.c
rp2040/: FlashStorage.md  README.md  SIO.md  compile_commands.json  makefile
stm32f446re/: MemoryModel.md  boot_process.md  linker_script.md  makefile  registers.md
(+92 files in other folders)
